ec_commands: update API for C++ compatibility

The size of empty structs (and unions) varies between C and C++.
When including in C++ code our external API in ec_commands.h header with
extern "C".
clang will complain (correctly) for all empty structs:
error: empty struct has size 0 in C, size 1 in C++
[-Werror,-Wextern-c-compat]

All those empty structs are actually sub-commands in a union,
so adding a dummy filler byte does not change the structure layout.

Signed-off-by: Vincent Palatin <vpalatin@chromium.org>

BRANCH=none
BUG=chromium:792408
TEST=make buildall

Change-Id: I23d2731543a33d14aaf5a980510b9ea71f837d27